cleaned some spacing, fixed stable key issue

--- a/src/index.css
+++ b/src/index.css
@@ -13,21 +13,45 @@ code {
     monospace;
 }
 
-/* .round-one {
+.round-one {
     display: grid;
     grid-template-columns: repeat(16, 1fr);
     grid-template-rows: 100px 20px repeat(3, 1fr);
     grid-column-gap: 10px;
-    grid-row-gap: 200px; 
-} */
+    grid-row-gap: 70px; 
+}
 
-/* .round-two {
+.round-two {
   display: grid;
   grid-template-columns: repeat(16, 1fr);
   grid-template-rows: 100px 20px repeat(3, 1fr);
   grid-column-gap: 10px;
-  grid-row-gap: 200px; 
-} */
+  grid-row-gap: 70px; 
+}
+
+.round-three {
+  display: grid;
+  grid-template-columns: repeat(16, 1fr);
+  grid-template-rows: 100px 20px repeat(3, 1fr);
+  grid-column-gap: 10px;
+  grid-row-gap: 70px; 
+}
+
+.round-four {
+  display: grid;
+  grid-template-columns: repeat(16, 1fr);
+  grid-template-rows: 100px 20px repeat(3, 1fr);
+  grid-column-gap: 10px;
+  grid-row-gap: 70px; 
+}
+
+.round-five {
+  display: grid;
+  grid-template-columns: repeat(16, 1fr);
+  grid-template-rows: 100px 20px repeat(3, 1fr);
+  grid-column-gap: 10px;
+  grid-row-gap: 70px; 
+}
 
 
 .song-card {  
